# binance-api-fetcher

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.env.sample  launch.json.sample  noxfile.py  pyproject.toml  pytest.ini  readthedocs.yaml
.github/workflows/: coverage.yml  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirments.txt
src/binance_api_fetcher/: __init__.py  __main__.py
src/binance_api_fetcher/model/: __init__.py  entity.py  service.py  status_code.py
src/binance_api_fetcher/persistence/: __init__.py  source.py  target.py
tests/: __init__.py  test_binance_api_fetcher_entity.py  test_binance_api_fetcher_main.py  test_binance_api_fetcher_service.py  test_binance_api_fetcher_source.py  test_binance_api_fetcher_status_code.py  test_binance_api_fetcher_target.py  test_binance_api_fetcher_version.py
tests/robot/: __init__.py  robot_source_custom_library.py  test_binance_api_fetcher_source.robot
