[tool.poetry]
name = "binance-api-fetcher"
version = "0.1.0"
description = "Binance API fetcher."
authors = ["José Menezes <jamenezes96@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Zezas/binance-api-fetcher/tree/main"
repository = "https://github.com/Zezas/binance-api-fetcher/tree/main"
keywords = ["binance", "api"]

[tool.poetry.scripts]
binance-api-fetcher = "binance_api_fetcher.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
wheel = "^0.41.3"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
types-requests = "^2.31.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
typeguard = "^4.1.5"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["binance_api_fetcher"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
