[tool.poetry]
name = "binance-api-fetcher"
version = "0.1.0"
description = "Binance API fetcher."
authors = ["José Menezes <jamenezes96@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Zezas/binance-api-fetcher/tree/main"
repository = "https://github.com/Zezas/binance-api-fetcher/tree/main"
keywords = ["binance", "api"]

[tool.poetry.scripts]
binance-api-fetcher = "binance_api_fetcher.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
wheel = "^0.41.3"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
types-requests = "^2.31.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
typeguard = "^4.1.5"
black = "^23.11.0"
darglint = "^1.8.1"
flake8 = "^6.1.0"
flake8-annotations = "^3.0.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.11.26"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
mypy = "^1.7.1"
pyaml = "^23.9.7"
types-pyyaml = "^6.0.12.12"
safety = "^2.3.5"
xdoctest = "^1.1.2"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["binance_api_fetcher"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
